--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -65,9 +65,6 @@
     </tbody>
   </table>
 </div>
-<div class="container">
-  <button class="btn" (click)="mostrarAlerta()">Aqui</button>
-</div>
 <!-- Modal para actualizar evento -->
 <div class="modal fade" id="actualizarEvento" tabindex="-1" aria-labelledby="actualizarEvento" aria-hidden="true">
   <div class="modal-dialog">
@@ -77,7 +74,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="eventoForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="eventoForm" (ngSubmit)="actualizarEvento()">
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre</label>
             <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre del Evento">
@@ -93,11 +90,14 @@
                 </div>
           </div>
           <div class="mb-3">
-              <label for="foto" class="form-label">Imagen del Producto</label>
-              <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+            <label for="foto" class="form-label">Imagen del Evento</label>
+            <div class="text-center">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="Imagen por defecto" width="100">
+            </div>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
           </div>
           <div class="mb-3">
-            <div class="mx-auto" id="mapEvento" style="width: 100%; height: 300px;"></div>
+            <div class="mx-auto" id="mapEvento" style="width: 100%; height: 200px;"></div>
         </div>
           <div class="mb-3">
             <label for="descripcion" class="form-label">Descripción</label>
