--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -32,6 +32,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" (click)="agregarProducto()">Producto</a></li>
+                        <li><a class="dropdown-item" (click)="agregarDerivado()">Derivado</a></li>
                         <li><a class="dropdown-item" (click)="agregarActividad()">Actividad</a></li>
                         <li><a class="dropdown-item" (click)="agregarEvento()">Evento</a></li>
                         <li><a class="dropdown-item" (click)="agregarPunto()">Punto de venta</a></li>
