--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,7 +23,7 @@
                 </li>
                 <li class="nav-item cursor_pointer">
                     <a class="nav-link" (click)="ventas()"><i class="blanco fa fa-line-chart"></i>
-                        <span class="blanco"> Ventas</span></a>
+                        <span class="blanco"> Ventas y Pedidos</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
