--- a/src/app/pages/agregar-derivado/agregar-derivado.component.html
+++ b/src/app/pages/agregar-derivado/agregar-derivado.component.html
@@ -1,1 +1,23 @@
-<p>agregar-derivado works!</p>
+<div class="mt-1">
+    <span>.</span>
+</div>
+<div class="container">
+    <h1 class="mt-5 mb-3 text-center">Agregar Derivado</h1>
+</div>
+<div class="container">
+    <form [formGroup]="formulario" (ngSubmit)="guardarDerivado()">
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" id="nombre" class="form-control" formControlName="nombre" placeholder="Nombre">
+        </div>
+        <div class="mb-3">
+            <label for="foto" class="form-label">Imagen del Producto</label>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="descripcion" class="form-label">Descripción</label>
+            <textarea id="descripcion" class="form-control" formControlName="descripcion" placeholder="Descripcion"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+    </form>
+</div>
