Eliminacion de contacto y cambio por pedidos

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,8 @@
                 <span class="blanco"> Productos</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="contacto()"><i class="blanco fa fa-envelope"></i>
-                <span class="blanco"> Contacto</span></a>
+            <a class="nav-link" (click)="pedidos()"><i class="blanco fa fa-envelope"></i>
+                <span class="blanco"> Pedidos</span></a>
           </li>
           <li class="nav-item cursor_pointer">
             <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-list"></i>
