--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -8,35 +8,125 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-4">
-    <div class="mx-auto" id="map" style="width: 90%; height: 500px;"></div>
-</div>
-<div class="container mt-5 mb-4">
-    <h1 class="text-center">Contáctanos</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <form>
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="tucorreo@example.com">
-                </div>
-                <div class="mb-3">
-                    <label for="mensaje" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </form>
+<div class="container-fluid m-5">
+    <div class="d-flex align-items-start">
+        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
+                type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Mayoreo</button>
+            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
+                type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Menudeo</button>
         </div>
-        <div class="col-md-6">
-            <h4>Nuestra Ubicación</h4>
-            <p>Dirección: Calle Principal, Ciudad, País</p>
-            <h4>Información de Contacto</h4>
-            <p>Correo Electrónico: info@example.com</p>
-            <p>Teléfono: +123 456 789</p>
+        <div class="tab-content" id="v-pills-tabContent">
+            <!-- Seccion de mayoreo -->
+            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab"
+                tabindex="0">
+                <div class="mr-5">
+                    <form (ngSubmit)="submitForm()">
+                        <div class="row">
+                            <ng-container *ngFor="let aux of listaProductos">
+                                <div class="col mb-2">
+                                    <div class="card">
+                                        <div class="check-mark">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox"
+                                                    [name]="'product_' + aux.id" [ngModel]="aux.selected"
+                                                    (ngModelChange)="onProductSelected(aux)">
+                                            </div>
+                                        </div>
+                                        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)"
+                                            class="card-img-fixed text-center" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{ aux.nombre }}</h5>
+                                            <p>{{ aux.descripcion }}</p>
+                                            <ng-container *ngIf="aux.estatus == 1; else no">
+                                                <p class="card-text" style="color: green;">Disponible</p>
+                                            </ng-container>
+                                            <ng-template #no>
+                                                <p class="card-text">No Disponible</p>
+                                            </ng-template>
+                                            <p class="card-text">${{aux.precioKilo}} MXN por Tonelada</p>
+                                            <div class="row">
+                                                <div class="col">
+                                                    <label for="cantidad">Cantidad:</label>
+                                                    <input type="number" class="form-control" [disabled]="!aux.selected"
+                                                        [name]="'cantidad_' + aux.id" [(ngModel)]="aux.cantidad">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </ng-container>
+                            <ng-container *ngIf="banderaContacto">
+                                <div class="container mt-5 mb-4">
+                                    <h1 class="text-center">Contáctanos</h1>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <form [formGroup]="productForm">
+                                                <div class="mb-3">
+                                                    <label for="nombre" class="form-label">Nombre</label>
+                                                    <input type="text" class="form-control" id="nombre"
+                                                        placeholder="Tu nombre" formControlName="nombre">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="estado" class="form-label">Estado</label>
+                                                    <input type="text" class="form-control" id="estado"
+                                                        placeholder="" formControlName="estado">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="ciudad" class="form-label">Ciudad</label>
+                                                    <input type="text" class="form-control" id="ciudad" placeholder=""
+                                                        formControlName="ciudad">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="email" class="form-label">Correo Electrónico</label>
+                                                    <input type="email" class="form-control" id="email"
+                                                        placeholder="tucorreo@example.com" formControlName="email">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="telefono" class="form-label">Telefono</label>
+                                                    <input type="phone" class="form-control" id="telefono"
+                                                        placeholder="" formControlName="telefono">
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h4>Nuestra Ubicación</h4>
+                                            <p>Dirección: Calle Principal, Ciudad, País</p>
+                                            <h4>Información de Contacto</h4>
+                                            <p>Correo Electrónico: info@example.com</p>
+                                            <p>Teléfono: +123 456 789</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mt-5">
+                                    <button type="submit" class="btn btn-primary">Guardar Selección</button>
+                                </div>
+                            </ng-container>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- Seccion de menudeo -->
+            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
+                tabindex="0">
+                <div class="row">
+                    <ng-container *ngFor="let aux of listaProductos">
+                        <div class="col">
+                            <div class="card">
+                                <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)"
+                                    class="card-img-fixed text-center" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ aux.nombre }}</h5>
+                                    <p>{{ aux.descripcion }}</p>
+                                    <p class="card-text">Precio: ${{aux.precio}} por kg</p>
+                                    <p class="card-text">En Stock: {{ aux.stock }} kg</p>
+                                </div>
+                            </div>
+                        </div>
+                    </ng-container>
+                </div>
+                <div class="mx-auto" id="map" style="width: 90%; height: 500px;"></div>
+            </div>
         </div>
     </div>
 </div>
