--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer class="sticky-footer gris">
     <div class="container my-auto">
         <div class="copyright text-center my-auto blanco">
+            <h1>Información de contacto</h1>
             <span>Copyright © 2023 Rancho Escondido | Powered by Rancho Escondido</span>
         </div>
     </div>
