--- a/src/app/pages/ventas/ventas.component.html
+++ b/src/app/pages/ventas/ventas.component.html
@@ -3,7 +3,7 @@
     <span>.</span>
   </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Ventas</h1>
+    <h1 class="mt-5 mb-3 text-center">Pedidos</h1>
 </div>
 <div class="container">
     <table class="table table-striped">
