--- a/src/app/pages/agregar-evento/agregar-evento.component.html
+++ b/src/app/pages/agregar-evento/agregar-evento.component.html
@@ -2,7 +2,7 @@
     <span>.</span>
   </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Agregar Evento</h1>
+    <h1 class="mt-5 mb-3 text-center">{{ titulo }}</h1>
 </div>
 <div class="container">
     <form [formGroup]="eventoForm" (ngSubmit)="onSubmit()">
@@ -20,6 +20,7 @@
                 <input type="date" class="form-control" id="fechaFin" formControlName="fechaFin">
               </div>
         </div>
+        
         <div class="mb-3">
             <label for="foto" class="form-label">Imagen del Producto</label>
             <input (change)="onFileSelect($event.target)" type="file" class="form-control">
