--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -25,7 +25,7 @@
         </td>
         <td class="text-center vertical_align">{{ list.descripcion }}</td>
         <td class="text-center vertical_align">
-          <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id)" data-bs-target="#actualizarEvento">Actualizar</button>
+          <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id)">Actualizar</button>
         </td>
         <td class="text-center vertical_align">
           <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id)" data-bs-target="#eliminarEvento">Eliminar</button>
@@ -97,7 +97,7 @@
             <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
           </div>
           <div class="mb-3">
-            <div class="mx-auto" id="mapEvento" style="width: 100%; height: 200px;"></div>
+            <div class="mx-auto" id="mapEvento" style="width: 450px; height: 200px;"></div>
         </div>
           <div class="mb-3">
             <label for="descripcion" class="form-label">Descripción</label>
