--- a/src/app/pages/agregar/agregar.component.html
+++ b/src/app/pages/agregar/agregar.component.html
@@ -42,7 +42,7 @@
         </div>
         <div class="mb-3">
             <label for="descripcion" class="form-label">Descripción</label>
-            <input type="number" class="form-control" formControlName="descripcion" id="descripcion" rows="4"
+            <input class="form-control" formControlName="descripcion" id="descripcion" rows="4"
                 placeholder="Descripción del producto">
         </div>
         <div class="mb-3">
