--- a/src/app/pages/agregar/agregar.component.html
+++ b/src/app/pages/agregar/agregar.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="mb-3">
             <label for="precioTonelada" class="form-label">Precio por tonelada</label>
-            <input type="number" class="form-control" formControlName="precioTonelada" id="precioTonelada" rows="4"
+            <input type="number" class="form-control" formControlName="precioTonelada" id="precioTonelada"
                 placeholder="Precio por tenelada">
         </div>
         <div class="mb-3">
