--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,8 +73,18 @@
     position: absolute;
     top: 0;
     right: 0;
-    color: white; /* Color del texto del check */
-    padding: 5px; /* Espaciado interior del check */
-    border-radius: 50%; /* Hace que el check sea circular */
-  }
-  
+    color: white;
+    /* Color del texto del check */
+    padding: 5px;
+    /* Espaciado interior del check */
+    border-radius: 50%;
+    /* Hace que el check sea circular */
+}
+
+.ocultar {
+    display: none;
+}
+
+.mostrar {
+    display: initial;
+}
