--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -12,9 +12,9 @@
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
-                type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Mayoreo</button>
+                type="button" role="tab" aria-controls="v-pills-home" aria-selected="true" (click)="cambiarMapa()">Mayoreo</button>
             <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
-                type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Menudeo</button>
+                type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false" (click)="cambiarMapa()">Menudeo</button>
         </div>
         <div class="tab-content" id="v-pills-tabContent">
             <!-- Seccion de mayoreo -->
@@ -44,7 +44,7 @@
                                             <ng-template #no>
                                                 <p class="card-text">No Disponible</p>
                                             </ng-template>
-                                            <p class="card-text">${{aux.precioKilo}} MXN por Tonelada</p>
+                                            <p class="card-text">${{aux.precioTonelada}} MXN por Tonelada</p>
                                             <div class="row">
                                                 <div class="col">
                                                     <label for="cantidad">Cantidad:</label>
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="mostrar" id="banderaMapa">
         <h1 style="margin-left: 110px;">Puntos de Venta</h1>
         <div id="map" style="width: 90%; height: 500px; margin-left: 110px;"></div>
     </div>
