--- a/src/app/pages/agregar-evento/agregar-evento.component.html
+++ b/src/app/pages/agregar-evento/agregar-evento.component.html
@@ -20,10 +20,12 @@
                 <input type="date" class="form-control" id="fechaFin" formControlName="fechaFin">
               </div>
         </div>
-        
         <div class="mb-3">
-            <label for="foto" class="form-label">Imagen del Producto</label>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+          <label for="foto" class="form-label">Imagen del Evento</label>
+          <div class="text-center">
+            <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+          </div>
+          <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
         </div>
         <div class="mb-3">
           <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
@@ -32,7 +34,6 @@
           <label for="descripcion" class="form-label">Descripción</label>
           <textarea class="form-control" id="descripcion" formControlName="descripcion" placeholder="Descripcion"></textarea>
         </div>
-        <button type="submit" class="btn btn-rojo">Registrar Evento</button>
+        <button type="submit" class="btn btn-rojo">{{ tituloBoton }}</button>
       </form>
-      
 </div>
