--- a/src/app/pages/agregar-punto/agregar-punto.component.html
+++ b/src/app/pages/agregar-punto/agregar-punto.component.html
@@ -2,7 +2,7 @@
     <span>.</span>
 </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Agregar Punto de Venta</h1>
+    <h1 class="mt-5 mb-3 text-center">{{titulo}}</h1>
 </div>
 <div class="container">
     <form [formGroup]="puntoVentaForm" (ngSubmit)="onSubmit()">
@@ -11,9 +11,12 @@
             <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre">
         </div>
         <div class="mb-3">
-            <label for="foto" class="form-label">Imagen del Producto</label>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
-        </div>
+            <label for="foto" class="form-label">Imagen del Evento</label>
+            <div class="text-center">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+            </div>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
+          </div>
         <div class="mb-3">
             <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
         </div>
@@ -30,6 +33,6 @@
                 <input type="text" class="form-control" id="horario" formControlName="horario" placeholder="Horario">
             </div>
         </div>
-        <button type="submit" class="btn btn-rojo">Agregar Punto de Venta</button>
+        <button type="submit" class="btn btn-rojo">{{ tituloBoton }}</button>
     </form>
 </div>
