--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -62,13 +62,15 @@
                         <ng-container *ngIf="banderaContacto">
                             <div class="container">
                                 <h2>Productos a comprar</h2>
-                                <ng-container *ngFor="let pro of productosNota; let i = index">
+                                <ng-container *ngFor="let pro of productosSeleccionados; let i = index">
                                     <div class="producto-seleccionado">
                                         <h6>Manzana: {{ pro.nombre }}</h6>
                                         <h6>Cantidad: {{ pro.cantidad }}</h6>
                                         <h6>Precio: {{ pro.precio }}</h6>
+                                        <h6>subtotal: {{ pro.subtotal }}</h6>
                                     </div>
                                 </ng-container>
+                                <h2>Total : </h2>
                             </div>
                             <div class="container mt-5 mb-4">
                                 <h1 class="text-center">Contáctanos</h1>
