avance liberar ventas

--- a/src/app/pages/ventas/ventas.component.html
+++ b/src/app/pages/ventas/ventas.component.html
@@ -28,7 +28,7 @@
         <td>{{ aux.total }}</td>
         <td>{{ aux.fechaOrdenado }}</td>
         <td>
-          <button type="button" class="btn btn-rojo" (click)="liberar(aux.id, aux.manzanas)">Liberar</button>
+          <button type="button" class="btn btn-rojo" (click)="liberar(aux.id)">Liberar</button>
         </td>
       </tr>
     </tbody>
