--- a/src/app/pages/liberar/liberar.component.html
+++ b/src/app/pages/liberar/liberar.component.html
@@ -1,25 +1,109 @@
-<nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
-    <div class="container">
-        <a class="navbar-brand">
-            <img src="../../../assets/img/logo.jpg" alt="..." width="30" height="30"><span
-                class="blanco">CPMT</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active cursor_pointer">
-                    <a class="nav-link" (click)="logout()">
-                        <span class="blanco">logout</span></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 <div class="mt-1">
     <span>.</span>
-  </div>
+</div>
 <div class="container">
     <h1 class="mt-5 mb-3 text-center">Liberar Pedido</h1>
 </div>
+<div class="container">
+    <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+        <div class="mb-3">
+            <div class="row">
+                <div class="col">
+                    <label for="nombreCliente" class="form-label">Nombre Cliente</label>
+                    <input type="text" id="nombreCliente" class="form-control" formControlName="nombreCliente">
+                </div>
+                <div class="col">
+                    <label for="telefonoCliente" class="form-label">Teléfono Cliente</label>
+                    <input type="tel" id="telefonoCliente" class="form-control" formControlName="telefonoCliente">
+                </div>
+                <div class="col">
+                    <label for="correoCliente" class="form-label">Correo Cliente</label>
+                    <input type="email" id="correoCliente" class="form-control" formControlName="correoCliente">
+                </div>
+            </div>
+        </div>
+        <div class="mb-3">
+            <div class="row">
+                <div class="col">
+                    <label for="estadoCliente" class="form-label">Estado Cliente</label>
+                    <input type="text" id="estadoCliente" class="form-control" formControlName="estadoCliente">
+                </div>
+                <div class="col">
+                    <label for="ciudadCliente" class="form-label">Ciudad Cliente</label>
+                    <input type="text" id="ciudadCliente" class="form-control" formControlName="ciudadCliente">
+                </div>
+                <div class="col">
+                    <label for="fechaOrdenado" class="form-label">Fecha Ordenado</label>
+                    <input type="date" id="fechaOrdenado" class="form-control" formControlName="fechaOrdenado" readonly>
+                </div>
+            </div>
+        </div>
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Cantidad</th>
+                        <th>Subtotal</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let aux of datosManzanas">
+                        <td>{{aux.nombre}}</td>
+                        <td>{{aux.cantidad}}</td>
+                        <td>{{aux.subtotal}}</td>
+                        <td>
+                            <button class="btn btn-rojo" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal" [disabled]="confirmado">Cambiar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="mb-3">
+            <label for="total" class="form-label">Total</label>
+            <input type="number" id="total" class="form-control" formControlName="total" readonly>
+        </div>
+        <div class="form-check text-center">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="cambiarBtn()">
+            <label class="form-check-label" for="flexCheckDefault">
+                Confirmar que el pedido es correcto
+            </label>
+        </div>
+        <button type="submit" class="btn btn-rojo" [disabled]="confirmadoDos">Liberar Pedido</button>
+    </form>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="formularioModal">
+            <div class="mb-3">
+              <label for="nombre">Nombre</label>
+              <input type="text" id="nombre" class="form-control" formControlName="nombre" readonly>
+            </div>
+            <div class="mb-3">
+              <label for="cantidad">Cantidad</label>
+              <input type="number" id="cantidad" class="form-control" formControlName="cantidad">
+            </div>
+            <div class="mb-3">
+              <label for="subtotal">Subtotal</label>
+              <input type="number" id="subtotal" class="form-control" formControlName="subtotal" readonly>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-rojo" (click)="guardarCambios()">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
